[gd_scene load_steps=2 format=3 uid="uid://clo8lnohleaho"]

[ext_resource type="Script" path="res://Main Menu/MainMenu.gd" id="1_1udil"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1udil")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 436.0
offset_top = 244.0
offset_right = 506.0
offset_bottom = 345.0
scale = Vector2(4, 4)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Stop" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stop"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Stop" to="." method="_on_stop_pressed"]
